# engine

./: .gitignore  .luarc.json  Cargo.toml  EKF.py  EKF_Phase1.py  EKF_Phase2.py  EKF_Phase3.py  Kalman Adaptativo.md  README.md  analysis_estimation.ipynb  build.rs  build_log.txt  check_err.txt  check_err_short.txt  components.json  config.ini  package-lock.json  package.json  robot_ball_log.csv  svelte.config.js  tauri.conf.json  vite.config.ts
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
.svelte-kit/types/: route_meta_data.json
lua/: api_globals.lua  challenge.lua  demo.lua  main.lua  main_seba.lua  parse_play_inspector.lua  run_lateral_test.lua  run_trajectory_tests.lua  test_estimation.lua  test_role_assigment.lua
lua/AI/: blackboard.lua  offense.lua  pass_to_goal.lua  roles_test.lua  support.lua  team_manager.lua
lua/demo/: draw_demo.lua  draw_demo2.lua
lua/play/: pases.lua  pass.lua  simple_pass.lua
lua/play_engine/: pases_demo.lua  play_engine.lua
lua/plays/: dual_pass.play  pass.play  pass_duo.play  triangle_pass.play
lua/skills/: face_to.lua  go_to_ball.lua  kick.lua  kick_to_point.lua  move.lua  move_ball.lua  (+1 more)
scripts-test/: bangbang_trajectories.lua  draw_demo.lua  draw_line.lua  pid.lua
specs/: lateral_movement_test.md  testing_system.md  trajectory_tracking_test.md
src/: config.rs  console.rs  environment.rs  game_controller.rs  grsim.rs  logger.rs  lua_interface.rs  main.rs  motion.rs  path_planner.rs  pid.rs  proto.rs  radio.rs  tracker.rs  trajectory.rs  types.rs  vision.rs  world.rs
(+258 files in other folders)
