[package]
name = "engine"
version = "1.0.0"
edition = "2021"
description = "Sysmic Robotics RoboCup SSL engine"

[dependencies]
tokio = { version = "1", features = ["full"] }
serialport = "4"
prost = "0.13"
prost-types = "0.13"
nalgebra = "0.33"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-ini = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
socket2 = "0.5"

[build-dependencies]
prost-build = "0.13"
