[package]
name = "engine"
version = "1.0.0"
edition = "2021"
description = "Sysmic Robotics RoboCup SSL engine"

[dependencies]
tokio = { version = "1", features = ["full"] }
serialport = "4"
protobuf = "=3.7.2"
nalgebra = "0.33"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["shell-open", "window-all"] }
rust-ini = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
socket2 = "0.5"
csv = "1.3"

[build-dependencies]
protobuf-codegen = "=3.7.2"
tauri-build = "1"
